<resources>
    <string name="app_name">inventorycomponent</string>
    <string name="inventory_material_code_exception">物资编码异常</string>
    <string name="inventory_edit_batches_title">修改批次</string>
    <string name="inventory_add_batches_title">添加批次</string>
    <string name="inventory_edit_desc_title">修改备注</string>
    <string name="inventory_approval_title">库存审核</string>
    <string name="inventory_check_title">盘点</string>
    <string name="inventory_create_title">新建物资</string>
    <string name="inventory_title">库存</string>
    <string name="inventory_in_title">入库</string>
    <string name="inventory_move_title">移库</string>
    <string name="inventory_my_title">我的预定</string>
    <string name="inventory_out_title">出库</string>
    <string name="inventory_query_title">库存查询</string>
    <string name="inventory_reserve_title">物资预定</string>
    <string name="inventory_material_detail_title">物资详情</string>
    <string name="inventory_reserve_details_title">预定详情</string>
    <string name="inventory_add_material_title">添加物料</string>
    <string name="inventory_edit_material_title">修改物料</string>
    <string name="inventory_select_storage_title">选择仓库</string>
    <string name="inventory_select_material_title">选择物资</string>
    <string name="inventory_material_provider_select_title">选择供应商</string>
    <string name="inventory_select_supervisor_title">选择主管</string>
    <string name="inventory_person_select_title">选择领料人</string>
    <string name="inventory_reservation_select_title">选择预订人</string>
    <string name="inventory_administrator_select_title">选择仓库管理员</string>
    <string name="inventory_add_administrator_hint">请选择仓库管理员</string>
    <string name="inventory_material_create_provider_name_empty_hint">请先输入供应商名称</string>
    <string name="inventory_material_create_price_empty_hint">请先输入单价</string>
    <string name="inventory_material_input_number_empty_hint">请输入数量</string>
    <string name="inventory_wait_approval">待审核</string>
    <string name="inventory_approvaled">已审核</string>
    <string name="inventory_storage_empty_hint">请先选择一个仓库</string>
    <string name="inventory_storage_useing">当前仓库正在使用中，不可修改</string>
    <string name="inventory_material_describe_material_hint">请先选择物料</string>
    <string name="inventory_material_describe_material_tip">请添加物料</string>
    <string name="inventory_select_material_and_check_amount">请修改物料批次</string>
    <string name="inventory_material_exist">物料已存在</string>
    <string name="inventory_delete_material">是否删除该物料</string>
    <string name="inventory_delete_batch">是否删除该批次</string>
    <string name="inventory_create_material_name_empty_hint">请先输入物资名称</string>
    <string name="inventory_material_name_length_hint">物资名称长度必须在 2 至 200 之间</string>
    <string name="inventory_create_code_empty_hint">请先输入物资编码</string>
    <string name="inventory_material_code_length_hint">物资编码长度必须在 2 至 200 之间</string>
    <string name="inventory_create_unit_empty_hint">请先输入物资单位</string>
    <string name="inventory_create_provider_name_empty_hint">请先输入供应商名称</string>
    <string name="inventory_create_price_empty_hint">请先输入单价</string>
    <string name="inventory_useless_administrator">无效的管理员</string>
    <string name="inventory_select_need_person_tip">请选择领用人</string>
    <string name="inventory_select_reservation_person_tip">请选择预定人</string>
    <string name="inventory_select_material_out_and_amount">请填写出库数量</string>
    <string name="inventory_select_material_out_and_amount_not_null">出库数量不能为空</string>
    <string name="inventory_select_material_move_and_amount_not_null">移库数量不能为空</string>
    <string name="inventory_select_material_move_and_amount_gt_zero">移库总数量需大于0</string>
    <string name="inventory_select_material_out_and_amount_gt_zero">出库总数量需大于0</string>
    <string name="inventory_no_storage_or_no_administrator">请先选择一个仓库</string>
    <string name="inventory_no_administrator">该仓库暂无管理员</string>
    <string name="inventory_confrim_select_need_people">请确认已选择领用人！</string>
    <string name="inventory_confrim_select_reservation_people">请确认已选择预定人！</string>
    <string name="inventory_qr_code_error">物资二维码不存在或匹配出错</string>
    <string name="inventory_add_material">请先选择物料</string>
    <string name="inventory_add_batch">请添加批次</string>
    <string name="inventory_target_storage_empty_hint">请选择目标仓库</string>
    <string name="inventory_original_administrator_useless">原仓库管理员无效</string>
    <string name="inventory_target_administrator_useless">目标仓库管理员无效</string>
    <string name="inventory_select_material_and_amount">请填写移库数量</string>
    <string name="inventory_select_material_and_reserve_amount">请选择物料并填写预定数量</string>
    <string name="inventory_storage_equal">原仓库与目标仓库相同</string>
    <string name="inventory_reserve_out">预定出库</string>
    <string name="inventory_direct_out">直接出库</string>
    <string name="inventory_select_administrator_tip">请先选择仓库管理员</string>
    <string name="inventory_select_supervisor_tip">请选择主管</string>
    <string name="inventory_useless_supervisor">无效的审批主管</string>
    <string name="inventory_material_no_amount">当前库存不足，请确认</string>
    <string name="inventory_add">添加</string>
    <string name="inventory_input_reserve_amount">请填写预定数量</string>
    <string name="inventory_reserve_empty_hint">预定数量不能为空或负数，请确认</string>
    <string name="inventory_out_adjusst_title">出库物资调整</string>
    <string name="inventory_material_out_batches">出库批次</string>
    <string name="inventory_material_out_quantity">出库数量：</string>
    <string name="inventory_material_move_batches">移库批次</string>
    <string name="inventory_material_move_quantity">移库数量：</string>
    <string name="inventory_material_check_batches">盘点批次</string>
    <string name="inventory_material_check_quantity">盘点数量：</string>
    <string name="inventory_out_exception_plss">出库数量不能大于账面数量</string>
    <string name="inventory_out_exception_pls">出库数量不能大于预定数量</string>
    <string name="inventory_material_out_exception_pls">出库数量不能大于有效数量</string>
    <string name="inventory_material_move_exception_pls">移库数量不能大于账面数量</string>
    <string name="inventory_stock_no_batch_tip">该物资暂无批次，不能进行盘点</string>
    <string name="inventory_add_batch_pls">请添加批次</string>
    <string name="inventory_material_storage_none_">物资仓库不存在无法移库</string>
    <string name="inventory_material_add_batch_existed">该批次已添加</string>
    <string name="inventory_material_editor_number">修改数量</string>
    <string name="inventory_material_input_out_number">请输入出库数量</string>
    <string name="inventory_material_input_move_number">请输入移库数量</string>
    <string name="inventory_material_input_check_number">请输入盘点数量</string>
    <string name="inventory_material_check_hint">请输入盘点说明...</string>
    <string name="inventory_reserve_cancel">取消预定</string>
    <string name="inventory_menu_approval">审批</string>
    <string name="inventory_not_operate">已驳回，不可操作</string>
    <string name="inventory_material_in_stock">有库存</string>
    <string name="inventory_material_not_in_stock">无库存</string>
    <string name="inventory_effective_number">有效数量：</string>
    <string name="inventory_effective_number_a">有效数量</string>
    <string name="inventory_total_count">账面数量：</string>
    <string name="inventory_number">数量：</string>
    <string name="inventory_number_a">数量</string>
    <string name="inventory_material_in_quantity">入库数量：</string>
    <string name="inventory_material_reserve_quantity">预定数量：</string>
    <string name="inventory_material_reserve_quantity_tip">预定数量：</string>
    <string name="inventory_material_reserve_quantity_a">预定数量</string>
    <string name="inventory_material_reserve_quantity_hint">请输入预定数量</string>
    <string name="inventory_material_reservation_number">已预定数量：</string>
    <string name="inventory_enough">充足</string>
    <string name="inventory_lack">紧缺</string>
    <string name="inventory_reserve_count">预定x</string>
    <string name="inventory_receiver_count">实领x</string>
    <string name="inventory_material_no_exist_inventory_tip">此物资不在%1$s仓库中</string>
    <string name="inventory_exist_same_warehouse_tip">该编码的物资已存在，请重新输入</string>
    <string name="inventory_exist_other_warehouse_tip">其他仓库已存在此编码的物资，保存会覆盖物资名称、品牌、型号和单位，是否继续？</string>
    <string name="inventory_invalid_token_limited">你没有相应权限，请确认</string>
    <string name="inventory_cancel_out">取消出库</string>
    <string name="inventory_cancel_reserve_tip">请输入取消预定原因</string>
    <string name="inventory_cancel_out_tip">请输入取消出库原因</string>
    <string name="inventory_audit_book">审批预定</string>
    <string name="inventory_expiration_time">过期时间：</string>
    <string name="inventory_expiration_time_a">过期时间</string>
    <string name="inventory_days_in_advance_time_a">提醒提前天数</string>
    <string name="inventory_select_expiration_time_hint">请选择过期时间</string>
    <string name="inventory_material_unit_rmb">单价(元)：</string>
    <string name="inventory_material_unit_rmb_a">单价(元)</string>
    <string name="inventory_material_price">单价</string>
    <string name="inventory_material_input_cost_hint">请输入单价</string>
    <string name="inventory_material_in_time">入库时间：</string>
    <string name="inventory_reserve_order_code">预定单号：</string>
    <string name="inventory_reserve_person">预定人：</string>
    <string name="inventory_reserve_person_a">预定人</string>
    <string name="inventory_reserve_person_tip">请选择预定人</string>
    <string name="inventory_reserve_time">预定日期：</string>
    <string name="inventory_storage_name">仓库名称：</string>
    <string name="inventory_storage_name_a">仓库名称</string>
    <string name="inventory_material_code">物资编码：</string>
    <string name="inventory_material_code_a">物资编码</string>
    <string name="inventory_material_name">物资名称：</string>
    <string name="inventory_material_name_a">物资名称</string>
    <string name="inventory_material_brand">品牌：</string>
    <string name="inventory_material_brand_a">品牌</string>
    <string name="inventory_brand_hint">请输入品牌</string>
    <string name="inventory_material_model">型号：</string>
    <string name="inventory_material_model_a">型号</string>
    <string name="inventory_model_hint">请输入型号</string>
    <string name="inventory_material_shelve">货架：</string>
    <string name="inventory_material_shelve_a">货架</string>
    <string name="inventory_material_shelve_hint">货架信息</string>
    <string name="inventory_material_minimum_stock">最低库存量：</string>
    <string name="inventory_material_minimum_stock_a">最低库存量</string>
    <string name="inventory_material_min_number_enter_hint">请输入最低库存量</string>
    <string name="inventory_material_in_code">入库单号：</string>
    <string name="inventory_reserve_tip">预定</string>
    <string name="inventory_material_admin">管理员：</string>
    <string name="inventory_storage_location">仓库位置：</string>
    <string name="inventory_material_kind">物资种类：</string>
    <string name="inventory_material_total">物资总量：</string>
    <string name="inventory_material_shortage_amount">低于最小量物资数：</string>
    <string name="inventory_unit_tip">单位</string>
    <string name="inventory_unit_hint">请输入单位</string>
    <string name="inventory_material_ratified_price_tip">核定价格</string>
    <string name="inventory_material_check_price_enter_hint">请输入核定价格</string>
    <string name="inventory_material_initial_number">初始数量</string>
    <string name="inventory_material_initial_number_hint">请输入初始数量</string>
    <string name="inventory_material_desc">备注</string>
    <string name="inventory_input_material_name_hint">请输入物资名称</string>
    <string name="inventory_save">保存</string>
    <string name="inventory_input_desc">请输入备注...</string>
    <string name="inventory_provider_a">供应商</string>
    <string name="inventory_basic_info">基本信息</string>
    <string name="inventory_material_describe_storage_hint">请选择仓库</string>
    <string name="inventory_storage">仓库</string>
    <string name="inventory_material_create_code_empty_hint">请输入物资编码</string>
    <string name="inventory_material_input_price_hint">请输入单价</string>
    <string name="inventory_material_create_due_date_select_hint">请选择过期时间</string>
    <string name="inventory_material_create_expirtion_select_hint">请输入提醒提前天数</string>
</resources>