<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical">

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/ui_topbar"
        style="@style/commonTopbarStyle" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/content_title_style1"
                android:text="@string/inventory_basic_info" />
            <!--仓库名称-->
            <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                android:id="@+id/civ_inventory_Storage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/list_item_bg"
                app:fm_content_item_et_hint="@string/inventory_material_describe_storage_hint"
                app:fm_content_item_show_line="false"
                app:fm_content_item_show_red="true"
                app:fm_content_item_show_tip="true"
                app:fm_content_item_show_tip_icon="true"
                app:fm_content_item_title="@string/inventory_storage" />


            <!--货架-->
            <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                android:id="@+id/civ_inventory_create_shelves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:fm_content_item_et_hint="@string/inventory_material_shelve_hint"
                app:fm_content_item_show_line="false"
                app:fm_content_item_show_red="false"
                app:fm_content_item_show_tip="false"
                app:fm_content_item_show_tip_icon="false"
                app:fm_content_item_title="@string/inventory_material_shelve_a" />

            <!--物资名称-->
            <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                android:id="@+id/civ_inventory_create_material_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:fm_content_item_et_hint="@string/inventory_input_material_name_hint"
                app:fm_content_item_show_line="false"
                app:fm_content_item_show_red="true"
                app:fm_content_item_show_tip="false"
                app:fm_content_item_show_tip_icon="false"
                app:fm_content_item_title="@string/inventory_material_name_a" />


            <!--物资编码-->
            <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                android:id="@+id/civ_inventory_create_material_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:fm_content_item_et_hint="@string/inventory_material_create_code_empty_hint"
                app:fm_content_item_show_line="false"
                app:fm_content_item_show_red="true"
                app:fm_content_item_show_tip="false"
                app:fm_content_item_show_tip_icon="false"
                app:fm_content_item_title="@string/inventory_material_code_a" />

            <!--单位-->
            <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                android:id="@+id/civ_inventory_create_material_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:fm_content_item_et_hint="@string/inventory_unit_hint"
                app:fm_content_item_show_line="false"
                app:fm_content_item_show_red="true"
                app:fm_content_item_show_tip="false"
                app:fm_content_item_show_tip_icon="false"
                app:fm_content_item_title="@string/inventory_unit_tip" />

            <!--品牌-->
            <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                android:id="@+id/civ_inventory_create_material_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:fm_content_item_et_hint="@string/inventory_brand_hint"
                app:fm_content_item_show_line="false"
                app:fm_content_item_show_red="false"
                app:fm_content_item_show_tip="false"
                app:fm_content_item_show_tip_icon="false"
                app:fm_content_item_title="@string/inventory_material_brand_a" />

            <!--型号-->
            <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                android:id="@+id/civ_inventory_create_material_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:fm_content_item_et_hint="@string/inventory_model_hint"
                app:fm_content_item_show_line="false"
                app:fm_content_item_show_red="false"
                app:fm_content_item_show_tip="false"
                app:fm_content_item_show_tip_icon="false"
                app:fm_content_item_title="@string/inventory_material_model_a" />

            <!--核定价格-->
            <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                android:id="@+id/civ_inventory_create_material_ratified_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:fm_content_item_et_hint="@string/inventory_material_check_price_enter_hint"
                app:fm_content_item_show_line="false"
                app:fm_content_item_show_red="false"
                app:fm_content_item_show_tip="false"
                app:fm_content_item_show_tip_icon="false"
                app:fm_content_item_title="@string/inventory_material_ratified_price_tip" />


            <!--最低库存量-->
            <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                android:id="@+id/civ_inventory_create_material_minimum_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:fm_content_item_et_hint="@string/inventory_material_min_number_enter_hint"
                app:fm_content_item_show_line="false"
                app:fm_content_item_show_red="false"
                app:fm_content_item_show_tip="false"
                app:fm_content_item_show_tip_icon="false"
                app:fm_content_item_title="@string/inventory_material_minimum_stock_a" />

            <!--初始数量-->
            <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                android:id="@+id/civ_inventory_create_material_initial_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:fm_content_item_et_hint="@string/inventory_material_initial_number_hint"
                app:fm_content_item_show_line="true"
                app:fm_content_item_show_red="false"
                app:fm_content_item_show_tip="false"
                app:fm_content_item_show_tip_icon="false"
                app:fm_content_item_title="@string/inventory_material_initial_number" />

            <LinearLayout
                android:id="@+id/inventory_create_hide_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <!--供应商-->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                        android:id="@+id/civ_inventory_create_material_provider"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/dp_30"
                        android:background="@color/white"
                        app:fm_content_item_show_line="false"
                        app:fm_content_item_show_red="true"
                        app:fm_content_item_show_tip="false"
                        app:fm_content_item_show_tip_icon="false"
                        app:fm_content_item_title="@string/inventory_provider_a" />

                    <ImageView
                        android:id="@+id/inventory_create_select_provider_iv"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/dp_16"
                        android:background="@drawable/icon_write" />

                </RelativeLayout>


                <!--单价-->
                <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                    android:id="@+id/civ_inventory_create_material_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/list_item_bg"
                    app:fm_content_item_et_hint="@string/inventory_material_input_price_hint"
                    app:fm_content_item_show_line="false"
                    app:fm_content_item_show_red="true"
                    app:fm_content_item_show_tip="false"
                    app:fm_content_item_show_tip_icon="false"
                    app:fm_content_item_title="@string/inventory_material_price" />

                <!--过期时间-->
                <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                    android:id="@+id/civ_inventory_create_select_due_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/list_item_bg"
                    app:fm_content_item_et_hint="@string/inventory_material_create_due_date_select_hint"
                    app:fm_content_item_show_line="false"
                    app:fm_content_item_show_red="true"
                    app:fm_content_item_show_tip="true"
                    app:fm_content_item_show_tip_icon="true"
                    app:fm_content_item_title="@string/inventory_expiration_time_a" />

            </LinearLayout>

            <!--提醒天数-->
            <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                android:id="@+id/civ_inventory_create_select_expiration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/list_item_bg"
                app:fm_content_item_et_hint="@string/inventory_material_create_expirtion_select_hint"
                app:fm_content_item_show_line="true"
                app:fm_content_item_show_red="false"
                app:fm_content_item_show_tip="false"
                app:fm_content_item_show_tip_icon="false"
                app:fm_content_item_title="@string/inventory_days_in_advance_time_a" />

            <!--备注-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_18"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dp_16"
                    android:paddingRight="@dimen/dp_16">

                    <TextView
                        style="@style/h3_15_9_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inventory_material_desc" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_6"
                        android:gravity="center_vertical"
                        android:text="*"
                        android:textColor="@color/red"
                        android:visibility="gone" />

                </LinearLayout>

                <com.facilityone.wireless.a.arch.widget.EditNumberView
                    android:id="@+id/inventory_create_material_desc_env"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_11"
                    android:background="@color/white"
                    app:fm_edit_number_desc="@string/inventory_input_desc" />

                <View style="@style/secant_line_style" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/inventory_create_material_photos_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:overScrollMode="never"
                    android:paddingBottom="@dimen/dp_13"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_4" />

                <View style="@style/secant_line_style" />

            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/work_order_query_menu_operate_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_6"
        android:paddingLeft="@dimen/dp_6"
        android:paddingRight="@dimen/dp_6"
        android:paddingTop="@dimen/dp_6">

        <Button
            android:id="@+id/inventory_create_material_save_btn"
            style="@style/btn_main_color_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/inventory_save" />

    </LinearLayout>
</LinearLayout>