<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/list_item_bg"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/inventoryInfoStyle"
            android:paddingTop="@dimen/dp_16">

            <TextView
                style="@style/content_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventory_storage_name"/>

            <TextView
                android:id="@+id/storage_item_name_tv"
                style="@style/h5_text_style"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"/>

        </LinearLayout>

        <LinearLayout
            style="@style/inventoryInfoStyle">

            <TextView
                style="@style/content_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventory_material_admin"/>

            <TextView
                android:id="@+id/storage_item_administrator_tv"
                style="@style/h5_text_style"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"/>

        </LinearLayout>

        <LinearLayout
            style="@style/inventoryInfoStyle">

            <TextView
                style="@style/content_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventory_storage_location"/>

            <TextView
                android:id="@+id/storage_item_location_tv"
                style="@style/h5_text_style"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"/>

        </LinearLayout>

        <LinearLayout
            style="@style/inventoryInfoStyle">

            <TextView
                style="@style/content_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventory_material_kind"/>

            <TextView
                android:id="@+id/storage_item_material_type_tv"
                style="@style/h5_text_style"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"/>

        </LinearLayout>

        <LinearLayout
            style="@style/inventoryInfoStyle">

            <TextView
                style="@style/content_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventory_material_total"/>

            <TextView
                android:id="@+id/storage_item_material_amount_tv"
                style="@style/h5_text_style"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"/>

        </LinearLayout>

        <LinearLayout
            style="@style/inventoryInfoStyle">

            <TextView
                style="@style/content_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventory_material_shortage_amount"/>

            <TextView
                android:id="@+id/storage_item_lack_material_count_tv"
                style="@style/h5_text_style"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"/>

        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/storage_item_dash_line"
        style="@style/dash_line_style"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"/>

    <View
        android:id="@+id/storage_item_secant_line"
        style="@style/secant_line_style"/>

</LinearLayout>